setup gh actions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "zenorocha.com",
+  "name": "bradleyyeo.com",
   "version": "5.0.0",
   "scripts": {
     "dev": "next dev",
